<resources>
    <string name="app_name">RemoteKakeibo</string>

    <!-- text of views -->
    <string name="action_settings">Settings</string>
    <string name="iv_listType">収入/支出</string>
    <string name="tv_price">金額</string>
    <string name="tv_date">日付</string>
    <string name="tv_category">費目</string>
    <string name="tv_detail">詳細</string>
    <string name="tv_totalIncome">収入</string>
    <string name="tv_totalExpense">支出</string>
    <string name="tv_income">収入</string>
    <string name="tv_expense">支出</string>
    <string name="tv_card">カード</string>
    <string name="tv_cash">現金</string>
    <string name="tv_sunday">日</string>
    <string name="tv_monday">月</string>
    <string name="tv_tuesday">火</string>
    <string name="tv_wednesday">水</string>
    <string name="tv_thursday">木</string>
    <string name="tv_friday">金</string>
    <string name="tv_saturday">土</string>
    <string name="bt_save">保存</string>
    <string name="bt_update">更新</string>
    <string name="bt_delete">削除</string>
    <string name="bt_return">戻る</string>
    <string name="bt_list">一覧</string>
    <string name="bt_new">新規</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_sync">同期</string>
    <string name="bt_nextmonth">↑翌月</string>
    <string name="bt_previousmonth">↓先月</string>
    <string name="bt_nextmonth_calendar">翌月→</string>
    <string name="bt_previousmonth_calendar">←先月</string>
    <string name="bt_zero">0</string>
    <string name="bt_one">1</string>
    <string name="bt_two">2</string>
    <string name="bt_three">3</string>
    <string name="bt_four">4</string>
    <string name="bt_five">5</string>
    <string name="bt_six">6</string>
    <string name="bt_seven">7</string>
    <string name="bt_eight">8</string>
    <string name="bt_nine">9</string>
    <string name="bt_back">back</string>
    <string name="bt_clear">C</string>

    <string name="msg_dbaccesserror">DBを更新できませんでした</string>

    <!-- label -->
    <string name="show_year">%1$d年</string>
    <string name="show_yearandmonth">%1$d年%2$d月</string>
    <string name="show_monthday">%1$d/%2$d</string>
    <string name="show_dayofweek">(%1$s)</string>
    <string name="show_subtotal_income">収入：%1$d</string>
    <string name="show_subtotal_expense">"  支出：%1$d"</string>

    <!-- title -->
    <string name="title_yearandmonth">年月選択</string>

    <!-- URL -->
    <string name="kakeibo_url">https://xxx.com</string>

    <!-- list of category -->
    <string-array name="lv_category_and_detail">
        <item>外食(朝)</item>
        <item>外食(昼)</item>
        <item>外食(夜)</item>
        <item>食費(その他)</item>
        <item>仕事関連</item>
        <item>服・雑貨</item>
        <item>趣味・娯楽</item>
        <item>交通費</item>
        <item>その他</item>
    </string-array>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>

</resources>
