<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- リスト -->
    <!-- リストのテキストサイズや枠線をつけたい -->
    <!-- ボタンと収入・支出の位置を入れ替えたい -->
    <ListView
        android:id="@+id/lv_categoryAndDetail"
        android:layout_width="@dimen/list_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="3dp">
    </ListView>
    <!-- 日付テキストビュー -->
    <RelativeLayout
        android:id="@+id/rl_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/text_small"/>
        <TextView
            android:id="@+id/tv_monthAndDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/tv_year"
            android:textSize="@dimen/text_medium" />
        <TextView
            android:id="@+id/tv_dayOfWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_monthAndDay"
            android:layout_toRightOf="@id/tv_monthAndDay"
            android:textSize="@dimen/text_small"/>
    </RelativeLayout>
    <!-- 金額 -->
    <RelativeLayout
        android:id="@+id/rl_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_date"
        android:layout_toLeftOf="@id/lv_categoryAndDetail">
        <TextView
            android:id="@+id/tv_priceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_large"
            android:gravity="right"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
    </RelativeLayout>
    <!-- 費目 -->
    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_category"
        android:layout_alignParentLeft="true"
        android:text="@string/tv_category"
        android:textSize="@dimen/text_medium" />
    <EditText
        android:id="@id/et_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/control_height"
        android:layout_below="@id/rl_price"
        android:layout_toLeftOf="@id/lv_categoryAndDetail"
        android:layout_toRightOf="@id/tv_category"
        android:inputType="text"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/white"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"/>
    <!-- 詳細 -->
    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_detail"
        android:layout_alignParentLeft="true"
        android:text="@string/tv_detail"
        android:textSize="@dimen/text_medium" />
    <EditText
        android:id="@id/et_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/control_height"
        android:layout_below="@+id/et_category"
        android:layout_toLeftOf="@id/lv_categoryAndDetail"
        android:layout_toRightOf="@id/tv_detail"
        android:inputType="text"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/white"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"/>
    <!-- (main)左：保存ボタン・右：一覧ボタン -->
    <!-- (update)左：削除ボタン・中：更新ボタン・右：キャンセルボタン -->
    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/control_height"
        android:layout_toLeftOf="@id/lv_categoryAndDetail"
        android:layout_below="@id/et_detail"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:id="@+id/bt_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_large"
            android:textColor="@color/white"
            android:background="@drawable/buttons"/>
        <Button
            android:id="@+id/bt_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_large"
            android:textColor="@color/white"
            android:background="@drawable/buttons"/>
        <Button
            android:id="@+id/bt_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_large"
            android:textColor="@color/white"
            android:background="@drawable/buttons"/>
    </LinearLayout>
    <!-- 支出・収入　現金・カード -->
    <LinearLayout
        android:id="@+id/ll_cardAndType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toLeftOf="@id/lv_categoryAndDetail"
        android:layout_below="@+id/ll_buttons"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="9">
        <TextView
            android:id="@+id/tv_expense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/tv_expense"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/termsandtype_noselected"/>
        <TextView
            android:id="@+id/tv_income"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/tv_income"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/termsandtype_noselected"/>
        <View
            android:id="@+id/vw_dummy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/tv_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/tv_card"
            android:textSize="@dimen/text_small"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/termsandtype_noselected"/>
        <TextView
            android:id="@+id/tv_cash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/tv_cash"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/termsandtype_noselected"/>
    </LinearLayout>
    <!-- テンキー -->
    <TableLayout
        android:id="@+id/tl_tenkeys"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/lv_categoryAndDetail"
        android:layout_below="@id/ll_cardAndType"
        android:stretchColumns="0,1,2" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/bt_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_nine"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
            <Button
                android:id="@+id/bt_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_eight"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
            <Button
                android:id="@+id/bt_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_seven"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/bt_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_six"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
            <Button
                android:id="@+id/bt_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_five"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
            <Button
                android:id="@+id/bt_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_four"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/bt_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_three"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
            <Button
                android:id="@+id/bt_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_two"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
            <Button
                android:id="@+id/bt_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_one"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/bt_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_zero"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
            <Button
                android:id="@+id/bt_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_back"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
            <Button
                android:id="@+id/bt_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bt_clear"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:background="@drawable/buttons" />
        </TableRow>
    </TableLayout>
</RelativeLayout>